# excogito

./: .gitignore  CMakeLists.txt  README.md  excogito.c  excogito_doxygen.conf
.github/workflows/: c-cpp.yml  python.yml
examples/energies/: 6d93_energies_1000frames.txt  6d93_energies_100frames.txt
examples/mappings/: 6d93_mapping_matrix.txt  tamapin_nextca_mapping.txt
examples/parameters/: parameters_N2.ini  parameters_cosine_6d93_N31.ini  parameters_distance_6d93_N31.ini  parameters_loadca_6d93_N31.ini  parameters_measurekl_6d93_N31.ini  parameters_norm_6d93_N31.ini  parameters_optimize_6d93_N31_small.ini  parameters_optimize_spins.ini.ini  parameters_random_6d93_N31_small.ini  parameters_spins_m1.ini
examples/probabilities/: m1_probs.txt  probabilities_optimize_spins.txt
examples/trajectories/: 6d93_1frame.xyz  m1_spins_grouped.csv  trajectory_optimize_spins.xyz
include/: alignment.h  cosine.h  distance.h  geometry.h  hierarchical_clustering.h  io.h  mapping.h  measure.h  measure_kl.h  my_malloc.h  norm.h  observables.h  optimize.h  optimize_kl.h  optimize_spins.h  random_mapping.h  random_mapping_kl.h  sampling.h  traj.h
lib/: CMakeLists.txt  alignment.c  cosine.c  distance.c  geometry.c  hierarchical_clustering.c  ini.c  io.c  mapping.c  measure.c  measure_kl.c  my_malloc.c  norm.c  observables.c  optimize.c  optimize_kl.c  optimize_spins.c  random_mapping.c  random_mapping_kl.c  sampling.c  traj.c
python/: README.md  conda_env_excogito.yml  sample_convert_xtc_to_xyz.py  setup_parfile.py
tests/: README.md  test_suite.py  test_suite.sh
tests/files/: 6d93_norms_test21.csv
tests/files/energies/: 4ake_energies_1frames.txt  6d93_energies_1000frames_IntValue.txt  6d93_energies_1000frames_MoreColumns.txt  6d93_energies_100frames_missing.txt  6d93_energies_10frames.txt
tests/files/mappings/: 4ake_pdb_mappings.txt  adenylate_ca_214.txt  tamapin_ca_mapping.txt  tamapin_mapping_backbone.txt  (+5 more)
(+25 files in other folders)
